--- a/travel-frontend/package.json
+++ b/travel-frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
+    "@reduxjs/toolkit": "^2.10.1",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -17,7 +18,9 @@
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-redux": "^9.2.0",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
