--- a/travel-backend/package.json
+++ b/travel-backend/package.json
@@ -42,6 +42,7 @@
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
     "graphql": "^16.12.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
@@ -62,6 +63,7 @@
     "@nestjs/testing": "^11.0.1",
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^3.0.0",
+    "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
