--- a/travel-backend/package.json
+++ b/travel-backend/package.json
@@ -30,10 +30,11 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/graphql": "^13.2.0",
     "@nestjs/jwt": "^11.0.1",
+    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.1.8",
-    "@nestjs/swagger": "^7.4.2",
+    "@nestjs/swagger": "^11.2.1",
     "@nestjs/websockets": "^11.1.8",
     "@prisma/client": "^6.18.0",
     "@types/ioredis": "^5.0.0",
