--- a/travel-frontend/package.json
+++ b/travel-frontend/package.json
@@ -29,6 +29,7 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^3.3.1",
+    "yet-another-react-lightbox": "^3.25.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
